# spin-rd

./: .gitignore  README.md  mkdocs.yml  netlify.toml  pyproject.toml
content/: index.md  plots.ipynb  slideshow.md
content/interactive/: index.css  index.html  index.js
content/javascripts/: extra.js  slideshow.js
content/stylesheets/: interactive.css
content/tutorials/: first_tutorial.md  second_tutorial.md
fit_example/: README.md  create_data.py  fit.py
