[tool.poetry]
name = "S(i)PIN Radiation Detector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.4"
mknotebooks = "^0.7.0"
numpy = ">=1.19.2,<1.20.0"
matplotlib = "^3.4.3"
zfit = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
